traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  val n=0
  while(! isInPosition()) {
    writeMessage("n")
    n = n+1
    if (0 != getY()) {
      setPos(getX(), getY() - 1)
    }
    else {
      setPos(getX() + 1, y-1)
    }
  }
}


val x = getWorldWidth()
val y = getWorldHeight()

def isInPosition():Boolean = {
  if ( (x -1 == getX()) && (0 == getY())) {return true}
  else {return false}
}